[package]
name = "LairdPhotos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
lettre = "0.10"
mime = "0.3"
futures-util = "0.3"  # needed for TryStreamExt, AsyncReadExt
askama = "0.12.1"
dotenv = "0.15.0"
tokio = "1.42.0"
tokio-test = "0.4.4"
chrono = "0.4.39"
